--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "docker-image-freshness-and-vulnerability-manager",
-  "version": "0.13.1",
-  "description": "",
+  "name": "difvm",
+  "version": "0.23.2",
+  "description": "Docker containers' source code freshness management API",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
@@ -9,34 +9,47 @@
     "test": "NODE_ENV=test nyc mocha --exit",
     "lint": "tslint -c tslint.json 'src/**/*.ts'"
   },
+  "repository": "https://github.com/pawelpaszki/FYP_back_end",
   "keywords": [],
   "author": "Pawel Paszki",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.17.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "commander": "^2.14.1",
+    "cors": "^2.8.4",
     "dockerode": "^2.5.3",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.1",
     "line-by-line": "^0.1.6",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.0",
     "nodemon": "^1.14.11",
     "q": "^1.5.1",
     "simple-get": "^2.7.0"
   },
+  "preferGlobal": true,
   "bin": {
-    "docker-vuln": "./src/vuln-cli.ts"
+    "difvm": "./src/vuln-cli.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.1",
     "@types/body-parser": "^1.16.8",
     "@types/chai": "^4.1.2",
+    "@types/cors": "^2.8.3",
     "@types/dockerode": "^2.5.3",
+    "@types/dotenv": "^4.0.2",
     "@types/express": "^4.11.0",
+    "@types/jsonwebtoken": "^7.2.5",
+    "@types/lodash": "^4.14.104",
     "@types/mocha": "^2.2.46",
     "@types/mongodb": "^3.0.3",
     "@types/mongoose": "^4.7.32",
     "@types/node": "9.3.0",
     "@types/q": "^1.0.7",
+    "@types/swagger-jsdoc": "0.0.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
     "mocha": "5.0.0",
@@ -60,7 +73,8 @@
       "coverage/*",
       "src/test/*",
       "node_modules",
-      "imagesTestDir/*"
+      "imagesTestDir/*",
+      "swagger"
     ],
     "reporter": [
       "text-summary",
